0.9 Commons Refactoring
Cleanup

Remove board history

ChessGame Cleanup , removed dependencies